<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="tvCategoria">Seleccione una categoria</string>
    <string name="tvListaProd">Lista de productos</string>
    <string name="tvCantidad">Cantidad a pedir</string>
    <string name="edtProdCantidad">0</string>
    <string name="btnProdAddPedido">Agregar</string>
    <string name="lblTitulo">Datos del pedido</string>
    <string name="lblCorreo">Correo electrónico</string>
    <string name="tvModoEntrega">Modo de entrega</string>
    <string name="optPedidoRetira">Retira en local</string>
    <string name="optPedidoEnviar">Enviar a domicilio</string>
    <string name="pedido_lbl_direccion">Dirección de envio</string>
    <string name="pedido_label_hora_entrega">Hora solicitada(hh:mm)</string>
    <string name="btnPedidoAddProducto">AGREGAR PRODUCTO</string>
    <string name="lblTotalPedido">Total del pedido:</string>
    <string name="btnPedidoQuitarProducto">QUITAR PRODUCTO</string>
    <string name="btnPedidoHacerPedido">HACER PEDIDO</string>
    <string name="btnPedidoVolver">VOLVER</string>
    <string name="tvPedidosRealizados">Pedidos Realizados</string>
    <string name="btnHistorialNuevo">NUEVO</string>
    <string name="btnHistorialMenu">MENU</string>
    <string name="lblEmail">Contacto:</string>
    <string name="lblFechaEntrega">Feha de entrega:</string>
    <string name="lblItems">Items:</string>
    <string name="lblAPagar">A Pagar:</string>
    <string name="lblEstado">Estado:</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btnVerDetalle">VER DETALLE</string>
    <string name="channelName">Notificaciones lab3</string>
    <string name="channelDescription">Este es el canal definido en el lab3</string>
    <string name="cbPreference1">Retirar por defecto</string>
    <string name="cbsummary1">El pedido es para retirar</string>
    <string name="edtPreference1">Correo Electronico</string>
    <string name="edtsummary1">Se usará por defecto</string>
    <string name="btnConfiguracion">Configuracion</string>
    <string name="btnCategorias">Categorias</string>
    <string name="tvNombreCategoria">Nombre de la categoria</string>
    <string name="btnCrearCategoria">Guardar</string>
    <string name="btnCategoriaVolver">VOLVER</string>
    <string name="abmProductoAltaNuevoON">Buscar por ID y actualizar</string>
    <string name="abmProductoAltaNuevoOFF">Crear producto nuevo</string>
    <string name="btnAbmProductoBuscar">Buscar por ID...</string>
    <string name="tvDatosProducto">Datos del producto</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvDescripcion">Descripcion</string>
    <string name="tvPrecio">Precio</string>
    <string name="tvBuscarPorID">Buscar producto por id</string>
    <string name="tvCategoriaGestion">Categoria</string>
    <string name="btnAbmProductoCrear">Guardar</string>
    <string name="btnAbmProductoBorrar">Borrar</string>
    <string name="btnAbmProductoVolver">VOLVER</string>
</resources>