<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPedidosRealizados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPedidosRealizados" />

    <ListView
        android:id="@+id/lstHistorialPedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHistorialNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnHistorialNuevo" />

        <Button
            android:id="@+id/btnhistorialMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnHistorialMenu" />


    </LinearLayout>

</LinearLayout>
